--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "nodemongo",
-  "version": "1.0.0",
-  "description": "Node app implementation with MongoDB in the backend.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/santhinisjr/node---mongo--ipl---ssj.git"
-  },
-  "author": "Santhini Sasidharan",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/santhinisjr/node---mongo--ipl---ssj/issues"
-  },
-  "homepage": "https://github.com/santhinisjr/node---mongo--ipl---ssj#readme",
-  "dependencies": {
-    "mongodb": "^2.2.35"
-  }
+    "name": "nodemongo",
+    "version": "1.0.0",
+    "description": "Node app implementation with MongoDB in the backend.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/santhinisjr/node---mongo--ipl---ssj.git"
+    },
+    "author": "Santhini Sasidharan",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/santhinisjr/node---mongo--ipl---ssj/issues"
+    },
+    "homepage": "https://github.com/santhinisjr/node---mongo--ipl---ssj#readme",
+    "dependencies": {
+        "ejs": "^2.6.1",
+        "express": "^4.16.3",
+        "mongodb": "^2.2.35",
+        "nodemon": "^1.18.1",
+        "save": "^2.3.2"
+    }
 }
