--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "ejs": "^2.6.1",
         "express": "^4.16.3",
+        "mongo-round": "^1.0.0",
         "mongodb": "^2.2.35",
         "nodemon": "^1.18.1",
         "save": "^2.3.2"
